bugfix object-jit, wrong password, Jumping through site part #1

--- a/client/src/components/AboutUs/style.scss
+++ b/client/src/components/AboutUs/style.scss
@@ -9,7 +9,7 @@
     transition: 1s;
   }
 
-  .photoTeam {
+  .photo-team {
     object-fit: cover;
   }
 }
